# quantum-redstone

./: CREDITS.md  HOPENPC.html  README.ipynb  README.md  export_cad.py  phase_lookup_table.json  place_cnot_gate.mcfunction  place_conservation_verifier.mcfunction  place_hadamard_gate.mcfunction  place_pauli_x_gate.mcfunction  place_pauli_z_gate.mcfunction  place_phase_evolution_engine.mcfunction  place_state_preparation.mcfunction  pyproject.toml  quantum-redstone-proposal-v0.1.0-complete.md  quantum.ipynb  quantum_circuit_generator.py  quantum_circuits.json  setup.py  topology-constraint-reality.docx
.ipynb_checkpoints/: HOPENPC-checkpoint.ipynb  README-checkpoint.ipynb  quantum_redstone_verification-checkpoint.ipynb
.virtual_documents/: HOPENPC.ipynb
cad_exports/: cnot_gate.dxf  cnot_gate.mtl  cnot_gate.stl  conservation_verifier.dxf  conservation_verifier.mtl  conservation_verifier.stl  hadamard_gate.dxf  hadamard_gate.mtl  hadamard_gate.stl  pauli_x_gate.dxf  pauli_x_gate.mtl  pauli_x_gate.stl  pauli_z_gate.dxf  pauli_z_gate.mtl  pauli_z_gate.stl  phase_evolution_engine.dxf  phase_evolution_engine.mtl  phase_evolution_engine.stl  state_preparation.dxf  state_preparation.mtl  state_preparation.stl
